@@ -20,6 +20,7 @@ package com.izforge.izpack.installer;
 import com.izforge.izpack.uninstaller.SelfModifier;
 import com.izforge.izpack.util.Debug;
 
+import java.awt.HeadlessException;
 import java.io.File;
 import java.lang.reflect.Method;
 
@@ -39,6 +40,17 @@ public class MultiVolumeInstaller
      */
     public static void main(String[] args)
     {
+        ProgressDialog progressDialog = null;
+        
+        try {
+            progressDialog = new ProgressDialog();
+            progressDialog.startProgress();    
+        }
+        catch (HeadlessException ex){
+            // this exception is expected if we're running in console or 
+            // auto installation mode
+            Debug.log("Progress will not be shown. No display found.");
+        }
         // default is to look in the current directory
         MultiVolumeInstaller.setMediadirectory(new File(".").getParent());
         if ((args.length > 0) && ("-direct".equals(args[0])))
@@ -61,24 +73,35 @@ public class MultiVolumeInstaller
         {
             try
             {
+                long maxmem = Runtime.getRuntime().maxMemory() / (1024*1024);
+                Debug.trace("Currently using maximum memory of " + maxmem + "m");
+                // just use a static fraction of memory for perm gen size.
+                long maxpermgensize = maxmem / 4; 
+                                
                 Class<MultiVolumeInstaller> clazz = MultiVolumeInstaller.class;
                 Method target = clazz.getMethod("install", new Class[]{String[].class});
                 String[] newargs = new String[args.length + 2];
-
                 System.arraycopy(args, 0, newargs, 2, args.length);
+               
                 // try to find the directory, where the jar file is located, this class was loaded
                 // from
+//                newargs[0] = "-Xmx" + maxmem + "m";
+//                newargs[1] = "-XX:MaxPermSize=" + maxpermgensize + "m";               
                 newargs[0] = "-mediadir";
                 newargs[1] = SelfModifier.findJarFile(clazz).getParent();
                 System.out.println("Setting mediadir: " + newargs[1]);
-                MultiVolumeInstaller.setMediadirectory(SelfModifier.findJarFile(clazz).getParent());
-                new SelfModifier(target).invoke(newargs);
+                MultiVolumeInstaller.setMediadirectory(newargs[1]);
+                new SelfModifier(target, maxmem, maxpermgensize).invoke(newargs);
+                
             }
             catch (Exception e)
             {
                 Debug.trace(e);
             }
-        }
+        }        
+        if (progressDialog != null){
+            progressDialog.stopProgress();    
+        }        
     }
 
     public static String getMediadirectory()
